kube/apps/synapse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse
  namespace: synapse
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: synapse
  ports:
    - name: http
      port: 8008
      targetPort: http
      protocol: TCP
