kube/apps/synapse/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse
  namespace: synapse
spec:
  ingressClassName: traefik
  rules:
    - host: matrix.dokkae.com
      http:
        paths:
          - path: /_matrix
            pathType: Prefix
            backend:
              service:
                name: synapse
                port:
                  number: 8008
          - path: /_synapse/client
            pathType: Prefix
            backend:
              service:
                name: synapse
                port:
                  number: 8008
